# auto-forge

./: .gitignore  CLAUDE.md  README.cn.md  README.md  session_history.json  session_review.json
backend/: Cargo.toml  nicole.txt
backend/src/: cache.rs  lib.rs  main.rs
backend/src/forge/: errand.rs  mod.rs  project.rs  tools.rs  wiki.rs
backend/src/mcp/: mod.rs
backend/src/mcp/tools/: mod.rs
backend/src/provider/: claude.rs  mod.rs  sse.rs  types.rs
backend/src/rbac/: api.rs  auth.rs  db.rs  middleware.rs  mod.rs
backend/src/relay/: agent.rs  api.rs  budget.rs  checkpoint.rs  config.rs  driver.rs  flow.rs  flows.rs  handoff.rs  handoff_store.rs  mod.rs  pipeline.rs  profession.rs  skills.rs  soul.rs  store.rs  task_plan.rs  task_plan_engine.rs  task_plan_parser.rs  task_plan_registry.rs  title.rs  turn.rs
backend/src/relay/flows/: mod.rs
backend/src/relay/flows/builtin/: auto-discovery.yml  bug-fix.yml  doc-patch.yml  fast-track.yml  goal-discovery.yml  post-discovery.yml  spec-tweak.yml  standard-spec.yml  superpower.yml
backend/src/relay/souls/: advisor.md  architect.md  assistant.md  coder.md  documenter.md  gofer.md  planner.md  reviewer.md  super-advisor.md  super-coder.md  super-tester.md  tester.md
backend/src/relay/task_plans/builtin/: deferred-decompose.atom
backend/src/runtime/: context.rs  mod.rs  permission.rs  session.rs
backend/tests/: forge_chat_e2e.py  forge_relay_mock.py  mcp_tools_verify.py  relay_integration.rs  relay_write_goals_test.rs  task_plan.rs  task_plan_engine.rs
cvx/: 01-overview.md  02-quickstart.md  README.md  (+2 more)
(+231 files in other folders)
