[package]
name = "auto-forge"
version = "0.1.0"
edition = "2021"
description = "AutoForge backend — spec-driven AI coding assistant"

[dependencies]
axum = { version = "0.8", features = ["json", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
futures = "0.3"
dirs = "5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
thiserror = "2"
rfd = "0.15"
urlencoding = "2"
notify = "6"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
auto-atom = { path = "../../auto-lang/crates/auto-atom" }
auto-val = { path = "../../auto-lang/crates/auto-val" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
